/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */
package lapr4.blue.s2.ipc.n1060503.chat.profile;

/**
 * represnt the possible status of user chat profile
 * @author Pedro Fernandes
 */
public enum StatusChatProfile {
    ONLINE,
    OFFLINE
}
